# L04_Assessment

./: CMakeLists.txt  assessment.cpp  assessment.h  hangman_guesser.cpp  main.cpp  mainTest.cpp  readme.md
.github/workflows/: actions.yml
